[package]
name = "http_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
base64 = "0.21"
log = "0.4"
env_logger = "0.10"
url = "2.0"
tokio-util = { version = "0.7", features = ["codec", "compat"] }